--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@types/three": "^0.172.0",
     "@vueuse/nuxt": "^12.4.0",
     "gsap": "^3.12.7",
+    "lenis": "^1.2.3",
     "nuxt": "^3.15.2",
     "nuxt-graphql-client": "^0.2.43",
     "nuxt-svgo": "^4.0.12",
     "pixi-filters": "^6.1.0",
     "pixi.js": "^8.8.1",
+    "split-type": "^0.3.4",
     "three": "^0.173.0",
     "vue": "latest",
     "vue-router": "latest"
