--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxtjs/seo": "^3.0.0-beta.3",
+    "@pinia/nuxt": "^0.10.1",
     "@types/three": "^0.172.0",
     "@vueuse/nuxt": "^12.4.0",
     "gsap": "^3.12.7",
@@ -22,6 +23,7 @@
     "nuxt": "^3.15.2",
     "nuxt-graphql-client": "^0.2.43",
     "nuxt-svgo": "^4.0.12",
+    "pinia": "^3.0.1",
     "pixi-filters": "^6.1.0",
     "pixi.js": "^8.8.1",
     "split-type": "^0.3.4",
