--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/fonts": "^0.11.0",
     "@nuxt/icon": "^1.10.3",
     "@nuxt/image": "^1.9.0",
     "@nuxtjs/seo": "^3.0.0-beta.3",
@@ -24,6 +24,7 @@
     "nuxt-graphql-client": "^0.2.43",
     "nuxt-svgo": "^4.0.12",
     "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "pixi-filters": "^6.1.0",
     "pixi.js": "^8.8.1",
     "split-type": "^0.3.4",
